tests/ast_interpreter/err_list_index_out_of_bounds.expected
<string>:3:11: error: list index out of bounds
    print(list[5]);
          ^^^^^^^
